made vr showing. but the way canvas z-index is controlled should be fixed

--- a/demos/code/style.css
+++ b/demos/code/style.css
@@ -1,5 +1,8 @@
 html, body {
   width:100%; height:100%;
+  margin:0px;
+  padding:0;
+  overflow: hidden;
 }
 
 body {
@@ -206,4 +209,14 @@ button {
 	display:block;
 	z-index: 2;
 	pointer-events:none;
+}
+
+#canvas_special{
+
+  width:400px;
+  height:400px;
+  position:absolute;
+  margin-top: 150px;
+  margin-left: 600px;
+  z-index: 100;
 }
